small update to fix overlap in login

--- a/static/styles.css
+++ b/static/styles.css
@@ -25,7 +25,7 @@ body {
 #header-content {
 
     padding: 20px;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%,-50%);
     color: #000;
@@ -71,12 +71,6 @@ body {
    width:100%;
 }
 
-.button{
-  position: absolute;
-  left:45%;
-  top:38%;
-  z-index: 10;
-}
 
 input {
    display: block;
